# acta-anonymizer

./: .gitignore  README.md  evaluation.py  gliner_test.py  inference.py  post_procesing.py  pre_procesing.py  pyproject.toml  requirements.txt  tox.ini  train.py
configs/: evaluation.yaml  inference.yaml  model.yaml  model_card.yaml  publishing.yaml  training.yaml
initial/: anonymizer_mock.py  evaluator.py
result/: evaluator.py  gliner_run.py  utils.py
src/acta_anonymizer/: __init__.py  config.py  data_loader.py  evaluator.py  model.py  publisher.py  trainer.py
